# Knowledge-base-api

./: .gitignore  .ruff.toml  DockerFile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/: router.py  search.py
app/core/: config.py
app/schemas/: base.py  document.py
app/services/: chunks.py  document.py  vector.py
tests/: conftest.py  test_api.py
