[project]
name = "knowledge-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.72.0",
    "fastapi[standard]>=0.128.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
    "uvicorn>=0.40.0",
]
